--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap");
+@import "./breakpoints.scss";
 
 html {
   font-size: 14px;
@@ -9,4 +10,13 @@ html {
 
 body {
   font-family: "Lato", sans-serif;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+.lh {
+  line-height: 1.25rem;
 }
