--- a/src/styles/breakpoints.scss
+++ b/src/styles/breakpoints.scss
@@ -1,15 +1,17 @@
 /**
   const SMALL = 425;
-  const MEDIUM = 1024;
+  const MEDIUM = 768;
+  const TABLET = 1023; specific to just this application
   const LARGE = 1200;
 */
 
 $breakpoints: (
   "min": 320px,
   // this is the width of the form on 320px phone, lots of the pages have forms
-  "small": 425px,
-  "medium": 1023px,
-  "large": 1200px,
+  "small": 424px,
+  "medium": 767px,
+  "tablet": 1023px,
+  "large": 1199px,
 );
 
 @mixin respond-to($name) {
