--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,37 +1,12 @@
 @import "village-components/dist/index.css";
 @import "./typography.scss";
 @import "./util.scss";
+@import "./sidebar.scss";
 
 main {
   max-width: map-get($map: $breakpoints, $key: large);
-  @include respond-to(medium) {
+  @include respond-to(tablet) {
     margin: 4rem auto;
-  }
-}
-
-.side {
-  max-width: 320px;
-  position: absolute;
-  z-index: 1;
-  @include respond-to(medium) {
-    position: relative;
-  }
-
-  .close {
-    @include respond-to(medium) {
-      display: none;
-    }
-  }
-
-  li {
-    padding: 0.35rem 0;
-    span {
-      padding-right: 0.75rem;
-    }
-
-    a {
-      text-decoration: underline;
-    }
   }
 }
 
@@ -41,8 +16,7 @@ main {
 
 .menu {
   animation: grow cubic-bezier(0.65, 0.05, 0.36, 1) 1.5s;
-  transform: scale(1.5);
-  @include respond-to(medium) {
+  @include respond-to(tablet) {
     display: none;
   }
 }
@@ -52,6 +26,13 @@ main {
     transform: scale(1.5);
   }
   50% {
-    transform: scale(2.5);
+    transform: scale(1.8);
+  }
+}
+
+.content {
+  padding: 2rem;
+  @include respond-to(medium) {
+    padding: 4rem;
   }
 }
